--- a/catalog/view/theme/d_visualize/stylesheet/vz-component/form_group/default.css
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-component/form_group/default.css
@@ -1,9 +1,15 @@
 .vz-form-group{
+  .vz-control-label{
+    padding-top: 7px;
+  }
   &--required{
     .vz-input__label:before,.vz-control-label:before{
       content: '* ';
       color: #F00;
       font-weight: bold;
     }
+  }
+  &--radio{
+
   }
 }
