--- a/catalog/view/theme/d_visualize/stylesheet/vz-component/d_product_sort/default.css
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-component/d_product_sort/default.css
@@ -42,6 +42,7 @@
       margin-bottom: 0;
       order:1;
       flex: 1 0 auto;
+      padding: 0 10px;
     }
     .vz-input__input{
       border: none;
