--- a/catalog/view/theme/d_visualize/template/information/contact.twig
+++ b/catalog/view/theme/d_visualize/template/information/contact.twig
@@ -1,6 +1,5 @@
 {#it's mean in layout template#}
 {% extends template %}
-
 {% block content %}
     <h1 class="heading-h1">{{ heading_title }}</h1>
     <h2 class="like-heading-h3">{{ text_location }}</h2>
@@ -124,7 +123,6 @@
             text_input:entry_email,
             error:error_email,
             }) %}
-            
             {% include component.form_group.template with component.form_group|merge({
             type:'textarea',
             id:'input-enquiry',
@@ -137,8 +135,8 @@
             }) %}
             {{ captcha }}
         </fieldset>
-        {% include component.d_button_submit.template with component.d_button_submit|merge({
-        button_continue:button_submit
+        {% include component.d_button_continue.template with component.d_button_continue|merge({
+            button_continue:button_submit
         }) %}
     </form>
 {% endblock %}
